# cat-solver

./: .gitignore  README.md  algorithm.py  eval.py  game.py  main.py  play.py  pyproject.toml  train.py
game/: __init__.py  core.py  interactive.py  trainable.py
rl/: __init__.py  agent.py  algorithm.py  model.py  replay_memory.py  utils.py
