[project]
name = "Cat Solver"
version = ""
description = ""
authors = [
    {name = "Bugen Zhao", email = "i@bugenzhao.com"},
]
dependencies = [
    "matplotlib",
    "setuptools",
    "parl",
    "paddlepaddle",
]
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
homepage = ""

[tool]
[tool.pdm]

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.scripts]
play = {call = "play:play"}
train = {call = "train:train"}
